--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container">
      <dev>
 
-        <a href="itms-services://?action=download-manifest&url=https://www.omtk.xyz/plist/PPSSPP.plist">
+        <a href="itms-services://?action=download-manifest&url=https://is.gd/5rC9Va">
             <span></span>
             <span></span>
             <span></span>
