--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <div class="container">
      <dev>
-
-        <a href="itms-services://?action=download-manifest&url=https://is.gd/5rC9Va">
+<!--itms-services://?action=download-manifest&url=-->
+        <a href="https://is.gd/5rC9Va">
             <span></span>
             <span></span>
             <span></span>
