--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container">
      <dev>
 <!--itms-services://?action=download-manifest&url=-->
-        <a href="https://is.gd/5rC9Va">
+        <a href="https://is.gd/07ZzYz">
             <span></span>
             <span></span>
             <span></span>
